--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -1,8 +1,8 @@
 default: &default
   authn_header: <%= ENV["AUTHN_HEADER"].presence || "X-Auth-Token" %>
-  authn_token: <%= ENV["AUTHN_TOKEN"].to_s.strip %>
+  authn_token: <%= "f6583e60-b13b-4228-b554-2eb332ca64e7".to_s.strip %>
   authz_header: <%= ENV["AUTHZ_HEADER"].presence || "X-Auth-User" %>
-  authz_token: <%= ENV["AUTHZ_TOKEN"].to_s.strip %>
+  authz_token: <%= "a1133bc6-a0f6-46bf-a2d8-6157418c6fe2".to_s.strip %>
 
 development:
   <<: *default
